@@ -1,3 +1,8 @@
+2008-10-07  Hui Zhu  <teawater@gmail.com>
+
+	* inflow.c (kill_command): Remove query special for
+	process record.
+
 2008-10-07  Michael Snyder  <msnyder@vmware.com>
 
 	* target.h (to_set_exec_direction, to_get_exec_direction): Remove.
